graph-4cd42e04-df35-48c7-828e-f38dad5a8254/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-4c74e2ba-15ec-460e-b71c-958747a8f04c
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-4c74e2ba-15ec-460e-b71c-958747a8f04c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
