graph-4cd42e04-df35-48c7-828e-f38dad5a8254/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-4c74e2ba-15ec-460e-b71c-958747a8f04c
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-4c74e2ba-15ec-460e-b71c-958747a8f04c
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-4c74e2ba-15ec-460e-b71c-958747a8f04c
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-4c74e2ba-15ec-460e-b71c-958747a8f04c
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
